World Checks Added
At the request of the VRC Modding discord, I've added emm-risky-functions-style checks. This will prevent the use of this mod in game worlds, and restrict use in clubs to only reducing the falloff range.

--- a/VoiceFalloffOverride.csproj
+++ b/VoiceFalloffOverride.csproj
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Utilities.cs" />
     <Compile Include="NetworkManagerHooks.cs" />
     <Compile Include="VoiceFalloffOverride.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -54,6 +55,10 @@
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>lib\UnityEngine.CoreModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.UnityWebRequestWWWModule, Version=3.7.1.6, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\SteamSSD\SteamApps\common\VRChat\MelonLoader\Managed\UnityEngine.UnityWebRequestWWWModule.dll</HintPath>
     </Reference>
     <Reference Include="VRCCore-Standalone">
       <HintPath>lib\VRCCore-Standalone.dll</HintPath>
