--- a/VoiceFalloffOverride.csproj
+++ b/VoiceFalloffOverride.csproj
@@ -81,6 +81,9 @@
     <Reference Include="VRCCore-Standalone">
       <HintPath>$(VRChatPath)MelonLoader\Managed\VRCCore-Standalone.dll</HintPath>
     </Reference>
+    <Reference Include="System">
+      <HintPath>$(VRChatPath)MelonLoader\Managed\System.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
